# TrafficVision

./: .gitignore  README.md  carpipeline.ipynb  custom.ipynb  main.py  pyproject.toml  rps_transfer.ipynb  seatbelt.py  test.ipynb
notebooks/: example.ipynb  rps_transfer.ipynb
src/saher/: pipeline.py  web.py
src/trafficvision/: cli.py  seatbelt-training.py  web.py
