[project]
name = "dlimageclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.249",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
